Added README and docker-compose

--- a/res/config-local-docker.yml
+++ b/res/config-local-docker.yml
@@ -1,7 +1,8 @@
 LOG_LEVEL: INFO # DEBUG, INFO, WARNING, ERROR, CRITICAL
+WEB_API_SERVER_HOST: web_api_server:8000
 
 # Database
-TIMESCALEDB_DB_HOST: localhost
+TIMESCALEDB_DB_HOST: timescaledb
 TIMESCALEDB_DB_USER: default
 TIMESCALEDB_DB_PASSWD: default1234
 TIMESCALEDB_DB_NAME: commerce
